# blog_tech

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: conftest.py  pyproject.toml  pytest_output.txt
backend/blog_tech_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/config/: urls.py
backend/config/settings/: base.py  test.py
backend/src/media_library/: apps.py  models.py  test_models.py
backend/src/media_library/infrastructure/: models.py
backend/src/media_library/interface/: admin.py
backend/src/media_library/migrations/: 0001_initial.py
backend/src/publishing/: apps.py  models.py  test_seed.py
backend/src/publishing/application/: ports.py  test_publish_article.py
backend/src/publishing/application/use_cases/: publish_article.py
backend/src/publishing/domain/: article.py  events.py  test_article.py
backend/src/publishing/infrastructure/: models.py  repositories.py  search.py  test_models.py  test_repositories.py  test_search.py
backend/src/publishing/interface/: admin.py  feeds.py  markdown_views.py  serializers.py  test_api.py  test_markdown.py  urls.py  views.py
backend/src/publishing/management/commands/: seed_demo.py
backend/src/publishing/migrations/: 0001_initial.py
backend/src/shared_kernel/domain/: test_values.py  values.py
backend/tests/: test_boot.py
frontend/: .gitignore  middleware.ts  package-lock.json  package.json  playwright.config.ts  steiger.config.ts  vitest.config.ts
prototype/: article-3d.html  article-archi.html  article-cours.html  article-notebook.html  article.html  atlas.html  (+9 more)
(+169 files in other folders)
